--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
 		
 		
 		<div id="webcam-container"></div>
-
+<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-uvbxhqda42m0" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		<div id="disqus_thread"></div>
 		
 		<script>
