--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<section class="section">
 			<h1 class="title">AI기반 대통령 닮은꼴 테스트</h1>
 			<h2 class="subtitle">나는 역대 대통령 가운데 누구와 닮았을까?</h2>
-			<h3 class="subsubtitle">(업로드 후 잠시 기다려 주세요.)</h3>
+			<h3 class="subsubtitle">(업로드 후 5초 정도 기다려 주세요.)</h3>
 		</section>
 		<script
 			class="jsbin"
