--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
+		<meta property ="og:type" content="website">
+		<meta property ="og:title" content="대통령 닮은꼴 찾기">
+		<meta property ="og:description" content="나는 역대 대통령 가운데 누구와 닮았을까? AI가 알려주는 대통령 닮은꼴!">
+		
 		<!-- Bootstrap CSS -->
 		<link
 			rel="stylesheet"
