--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta property ="og:type" content="website">
 		<meta property ="og:title" content="대통령 닮은꼴 찾기">
 		<meta property ="og:description" content="나는 역대 대통령 가운데 누구와 닮았을까? AI가 알려주는 대통령 닮은꼴!">
+		<meta property ="og:url" content="https://am-i-president.netlify.app/">
 		
 		<!-- Bootstrap CSS -->
 		<link
